Exclude README.md from the generated site.

--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,4 @@ markdown: kramdown
 # Added configuration
 permalink: /:year/:month/:day/:title/
 disqus_username: kitsched
+exclude: ['README.md']
