--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,28 @@
-# Site settings
-title: Kitsched!
-email: janos.rusiczki@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.rusiczki.net" # the base hostname & protocol for your site
-twitter_username: kitsched
-github_username:  kitsched
+# Dependencies
+markdown:         kramdown
+highlighter:      rouge
 
-# Build settings
-markdown: kramdown
+# Setup
+title:            János Rusiczki
+tagline:          Your average weblog
+description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              http://jekyll.rusiczki.net
+baseurl:          /
+permalink:        /:year/:month/:day/:title/
 
-# Added configuration
-permalink: /:year/:month/:day/:title/
-disqus_username: kitsched
-exclude: ['README.md']
-paginate: 10
-paginate_path: "page/:num"
+author:
+  name:           'János Rusiczki'
+  url:            https://twitter.com/janosrusiczki
+
+paginate:         5
+
+# Custom vars
+version:          2.1.0
+plugins:
+  - jekyll-paginate
+
+github:
+  repo:           https://github.com/poole/hyde
+
+exclude:
+  - README.md
