--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:      rouge
 # Setup
 title:            János Rusiczki
 tagline:          Your average weblog
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      Ruby & Web Developer. Photographer. Drone Pilot. Snowboarder. Etc.
 url:              http://jekyll.rusiczki.net
 baseurl:          /
 permalink:        /:year/:month/:day/:title/
