--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter: rouge
 title: János Rusiczki
 tagline: Your average weblog
 description: Ruby & Web Developer. Photographer. Drone Pilot. Snowboarder. Etc.
-url: http://jekyll.rusiczki.net
+url: https://www.rusiczki.net
 baseurl: /
 permalink: /:year/:month/:day/:title/
 
