--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
+
 rvm:
-- 2.3.3
+- 2.4
 
 env:
   global:
@@ -10,6 +11,6 @@ branches:
   only:
   - master
 
-sudo: false # route your build to the container-based infrastructure for a faster build
-
-script: bundle exec jekyll build && bundle exect rake test
+script:
+  - bundle exec jekyll build
+  - bundle exec rake test
