--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,30 @@
 language: ruby
-
 rvm:
 - 2.4
-
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  - secure: UZBxS/pqbJVQlnPEfqbOIWKlE0dqUE4I5n40dfp1vApYu8rEufub/P/IXY8nS5MKlQnFoigSGo5TPQhdoWPgn4UNyebXB7YOlryPRYRw3y2EfBO8vx6esD9KdsFLfOCz08ZeLuOmZdomZEx8X/xd+USE4w98y9iycsyzeCD0kuI=
+  - secure: fIlHGdkIMgByUs8M40WQJo+nqlckfO4jMXOQ5MowYymw1szgdZKugq8/+rmxnGMSGFcMgodu9Kd/qfGVNVzbHGjr8GYn0/ackZPurZWErpWAE2WcVw/MiVMbayYGaDYa89w+SQ4MTT0YFJ2QoO50sl9tqE7J/1HiX0EG2b3MpOE=
+  - secure: rTgM9q4Anne8R3iXDq9RQtQsqDUsXGIigQCMfJa691C+Z1/rI1OXPOEQ7eiIMuG1au6EZMZBp9zBOBGaouHe5Dvxa5c3u1DVM0O3ImnMXWsAOYwo1nYLdE4VeJk998oV4WatN3NtcWOnr5aEWZVHup+conwZy+hiLmlcLYmqRxg=
 branches:
   only:
   - master
-
 script:
-  - bundle exec jekyll build
-  - bundle exec rake test
+- bundle exec jekyll build
+- bundle exec rake test
+addons:
+  ssh_known_hosts:
+  - "$DEPLOY_HOST"
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_7c9a13614df7_key -iv $encrypted_7c9a13614df7_iv
+  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --quiet --delete-after _site/* $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_DIRECTORY
+  on:
+    branch: master
