--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
   ssh_known_hosts: rusiczki.net
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_7c9a13614df7_key -iv $encrypted_7c9a13614df7_iv
-  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  -in ./_support/deploy/deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
