vhost.conf update
[ci skip]

--- a/_support/nginx/vhost.conf
+++ b/_support/nginx/vhost.conf
@@ -1,13 +1,53 @@
 server {
-  listen 80;
-
-  root /var/www/jekyll.rusiczki.net;
-  index index.html index.htm;
-
-  server_name jekyll.rusiczki.net;
-
-  location /feed {
-    return 301 http://feeds2.feedburner.com/janosrusiczki;
-  }
+    listen 80;
+    server_name rusiczki.net www.rusiczki.net;
+    return 301 https://www.rusiczki.net$request_uri;
 }
 
+server {
+    listen 443 ssl http2;
+    server_name rusiczki.net;
+    return 301 https://www.rusiczki.net$request_uri;
+
+    ssl_certificate /etc/letsencrypt/live/rusiczki.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/rusiczki.net/privkey.pem; # managed by Certbot
+
+    include /etc/nginx/snippets/ssl.conf;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name www.rusiczki.net;
+    root /var/www/rusiczki.net;
+    index index.html;
+
+    location ~ /feed/?$ {
+        return 301 http://feeds2.feedburner.com/janosrusiczki;
+    }
+
+    access_log /var/log/nginx/rusiczki.net-secure-access.log;
+    error_log /var/log/nginx/rusiczki.net-secure-error.log;
+
+    ssl_certificate /etc/letsencrypt/live/rusiczki.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/rusiczki.net/privkey.pem; # managed by Certbot
+
+    include /etc/nginx/snippets/ssl.conf;
+}
+
+server {
+    listen 80;
+    server_name content.rusiczki.net;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+   listen 443 ssl http2;
+   server_name content.rusiczki.net;
+   root /var/www/content.rusiczki.net;
+   index index.html index.htm;
+
+   ssl_certificate /etc/letsencrypt/live/rusiczki.net/fullchain.pem; # managed by Certbot
+   ssl_certificate_key /etc/letsencrypt/live/rusiczki.net/privkey.pem; # managed by Certbot
+
+   include /etc/nginx/snippets/ssl.conf;
+}
