--- a/.travis.yml
+++ b/.travis.yml
@@ -6,23 +6,24 @@ env:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
   - secure: jyKtbSNxKL7OwpvPLmrryIdtmQs5Jg6HT8OVbjThgfNTPJ6yaT1kriUNlt9oqfdQFYjyKWCiLjzAs8GbuKvKd2Y7q3/7khQWgmbNevHaqSlJnokSnrS5O9oIXXPJdSHU/tom/QIvM3NF34ycxh5vckv8VbXAMtP4ECq2bpqwKrU=
   - secure: G42A5BMC+wl18g4vBM9lDDVvvW+V3QRgl27AZkq50LI/GhXzvtGFRxL7gs8scIElfz3h0ncd51pnVfr0HM04c1kqCME5haQT2MHaG2ndYpDyOnjw5yFXjKtZ1G+46oopb6ijswlrEf+EAV8o6tq9NOkoCPaFLhujg2oBu2HI3dA=
+  - secure: D7q8F3Z+/HYNVWbwNCBjO2qu7FaVw1Nme+WGUl6yVSZl4k6QpbnHrqg4ZEXCzrxNgBrSOzmj58E5Rp3ATRZYDGQiwx6G2ehXhab5iSet7uUsSCycbEtcle3bXmnRI5Bb+ZzZtwdZN1qPYoAS7ugbCmVmX9cLdClyBMgGrF+1mj8=
 branches:
   only:
   - master
 script:
 - bundle exec jekyll build
 - bundle exec rake test
-addons:
-  ssh_known_hosts: rusiczki.net
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_7c9a13614df7_key -iv $encrypted_7c9a13614df7_iv
   -in ./_support/deploy/deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
+- echo -e "Host $DEPLOY_HOST\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --quiet --delete-after _site/* $DEPLOY_USER@rusiczki.net:$DEPLOY_DIRECTORY
+  script: rsync -r --quiet --delete-after _site/*
+    $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_DIRECTORY
   on:
     branch: master
