Cache the bundle

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm:
 - 2.4
+cache: bundler
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
@@ -10,6 +11,9 @@ env:
 branches:
   only:
   - master
+install:
+- bundle config path vendor/bundle
+- bundle install  
 script:
 - bundle exec jekyll build
 - bundle exec rake test
