--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_deploy:
 - echo -e "Host $DEPLOY_HOST\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 deploy:
   provider: script
+  edge: true
   script: rsync -r --quiet --delete-after _site/*
     $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_DIRECTORY
   on:
