--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_deploy:
 deploy:
   provider: script
   edge: true
-  script: rsync -r -e 'ssh -p $DEPLOY_PORT' --quiet --delete-after _site/*
+  script: rsync -r --quiet --delete-after _site/*
     $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_DIRECTORY
   on:
     branch: master
