--- a/_config.yml
+++ b/_config.yml
@@ -70,3 +70,6 @@ jekyll-archives:
     month: '/:year/:month/'
     day: '/:year/:month/:day/'
     category: '/category/:name/'
+
+jekyll_tidy:
+  exclude: ["feed.xml"] 
