--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -2,7 +2,7 @@ name: Jekyll Build, Test and Deploy
 on:
   push:
     branches: 
-      - main
+      - master
 jobs:
   jekyll-build:
     runs-on: ubuntu-latest
