--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -14,3 +14,5 @@ jobs:
           bundler-cache: true
       - name: Build the site
         run: bundle exec jekyll build
+      - name: Test the site
+        run: bundle exec rake test
