--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -4,10 +4,11 @@ on:
     branches: 
       - master
 jobs:
-  jekyll-build:
+  bundle-build-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the sources
+        uses: actions/checkout@v3
       - name: Set up Ruby, install and cache the bundle
         uses: ruby/setup-ruby@v1
         with:
@@ -16,3 +17,21 @@ jobs:
         run: bundle exec jekyll build
       - name: Test the site
         run: bundle exec rake test
+      - name: Cache the site
+        id: cache-site
+        uses: actions/cache@v2
+        with:
+          path: _site
+          key: ${{ github.sha }}-site
+  deploy:
+    runs-on: ubuntu-latest
+    needs: bundle-build-test
+    steps:
+      - name: Restore cache
+        id: cache-site
+        uses: actions/cache@v2
+        with:
+          path: _site
+          key: ${{ github.sha }}-site
+      - name: Something
+        run: ls _site/
