--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -37,9 +37,9 @@ jobs:
         run: ls _site/
       - name: Delete cache
         env:
-          PAT_CACHE: ${{ secrets.PAT_CACHE }}
+          PAT_ACTIONS: ${{ secrets.PAT_ACTIONS }}
         run: |
           curl -X DELETE \
           -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token $PAT_CACHE" \
-          https://api.github.com/repos/${{ github.repository }}/actions/caches/${{ github.sha }}-site
+          -H "Authorization: Bearer $PAT_ACTIONS" \
+          https://api.github.com/repos/${{ github.repository }}/actions/caches?key=${{ github.sha }}-site
