--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: _site
-          key: ${{ github.sha }}-site
+          key: site-sha-${{ github.sha }}
   deploy:
     runs-on: ubuntu-latest
     needs: bundle-build-test
@@ -32,14 +32,12 @@ jobs:
         uses: actions/cache@v3
         with:
           path: _site
-          key: ${{ github.sha }}-site
+          key: site-sha-${{ github.sha }}
       - name: Something
         run: ls _site/
       - name: Delete cache
-        env:
-          PAT_ACTIONS: ${{ secrets.PAT_ACTIONS }}
         run: |
           curl -X DELETE \
           -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: Bearer $PAT_ACTIONS" \
-          https://api.github.com/repos/${{ github.repository }}/actions/caches?key=${{ github.sha }}-site
+          -H "Authorization: Bearer ${{ secrets.PAT_ACTIONS }}" \
+          https://api.github.com/repos/${{ github.repository }}/actions/caches?key=site-sha-${{ github.sha }}
