--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -37,7 +37,8 @@ jobs:
         run: ls _site/
       - name: Delete cache
         run: |
-          curl -X DELETE \
+          curl -s \
+          -X DELETE \
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_ACTIONS }}" \
           https://api.github.com/repos/${{ github.repository }}/actions/caches?key=site-sha-${{ github.sha }}
