--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -7,17 +7,17 @@ jobs:
   bundle-build-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the sources
+      - name: Checkout sources
         uses: actions/checkout@v3
-      - name: Set up Ruby, install and cache the bundle
+      - name: Set up Ruby, install and cache bundle
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - name: Build the site
+      - name: Build site
         run: bundle exec jekyll build
-      - name: Test the site
+      - name: Test site
         run: bundle exec rake test
-      - name: Cache the site
+      - name: Cache site
         id: cache-site
         uses: actions/cache@v3
         with:
@@ -33,8 +33,15 @@ jobs:
         with:
           path: _site
           key: site-sha-${{ github.sha }}
-      - name: Something
-        run: ls _site/
+      - name: Deploy with rsync
+        uses: burnett01/rsync-deployments@5.2.1
+        with:
+          switches: -avzr --delete
+          path: _site
+          remote_path: ${{ secrets.DEPLOY_PATH }}
+          remote_host: ${{ secrets.DEPLOY_HOST }}
+          remote_user: ${{ secrets.DEPLOY_USER }}
+          remote_key: ${{ secrets.DEPLOY_KEY }}
       - name: Delete cache
         run: |
           curl -s \
