--- a/.github/workflows/jekyll-build-test-and-deploy.yml
+++ b/.github/workflows/jekyll-build-test-and-deploy.yml
@@ -4,7 +4,7 @@ on:
     branches: 
       - master
 jobs:
-  bundle-build-test:
+  bundle-build-test-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -17,22 +17,6 @@ jobs:
         run: bundle exec jekyll build
       - name: Test site
         run: bundle exec rake test
-      - name: Cache site
-        id: cache-site
-        uses: actions/cache@v3
-        with:
-          path: _site
-          key: site-sha-${{ github.sha }}
-  deploy:
-    runs-on: ubuntu-latest
-    needs: bundle-build-test
-    steps:
-      - name: Restore cache
-        id: cache-site
-        uses: actions/cache@v3
-        with:
-          path: _site
-          key: site-sha-${{ github.sha }}
       - name: Deploy with rsync
         uses: burnett01/rsync-deployments@7.0.1
         with:
@@ -41,11 +25,4 @@ jobs:
           remote_path: ${{ secrets.DEPLOY_PATH }}
           remote_host: ${{ secrets.DEPLOY_HOST }}
           remote_user: ${{ secrets.DEPLOY_USER }}
-          remote_key: ${{ secrets.DEPLOY_KEY }}
-      - name: Delete cache
-        run: |
-          curl -s \
-          -X DELETE \
-          -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: Bearer ${{ secrets.PAT_ACTIONS }}" \
-          https://api.github.com/repos/${{ github.repository }}/actions/caches?key=site-sha-${{ github.sha }}
+          remote_key: ${{ secrets.DEPLOY_KEY }}  
