--- a/.github/workflows/algolia-index.yml
+++ b/.github/workflows/algolia-index.yml
@@ -1,5 +1,8 @@
 name: Index with Algolia
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * 1"
 jobs:
   bundle-algolia:
     runs-on: ubuntu-latest
